feat: Add Execution Block Trace
